prevent a horizontal scroll at mobile

--- a/tbx/static_src/sass/components/_client-item.scss
+++ b/tbx/static_src/sass/components/_client-item.scss
@@ -65,7 +65,7 @@
 
     .streamfield & {
         width: 100%;
-        padding-left: 0;
+        padding: 0;
 
         &::before {
             content: none; // don't show li arrow
